--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.demo" >
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    package="com.example.demo">
 
     <application
         android:allowBackup="true"
@@ -10,13 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Demo" >
+        android:theme="@style/Theme.Demo">
+        <activity
+            android:name=".MainApp.UpdateDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".MainApp.MainActivity2"
             android:exported="false" />
         <activity
             android:name=".MainApp.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,5 +25,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
